Delete page quote. Rearrange info from pages.

--- a/code/index.html
+++ b/code/index.html
@@ -37,9 +37,6 @@
               <a href="newsreviews.html">News & Reviews</a>
             </li>
             <li>
-              <a href="quotes.html">Quotes & Memes</a>
-            </li>
-            <li>
               <a href="mostwanted.html">Most Wanted</a>
             </li>
           </ul>
@@ -106,7 +103,7 @@
               <figure>
                 <img
                   src="../img/illustratedYogaCat.png"
-                  class="img-big-news-one"
+                  class="img-big-news-illustration-one"
                   alt="An illustration of a cat sitting in the yoga lotus position"
                 />
                 <figcaption>
@@ -140,11 +137,7 @@
         </div>
       </section>
       <section class="other-news">
-        <h3>Smirre Works Out</h3>
-        <!-- The other news  -->
-        <!-- On desktop-sized screens: four cards in a row, 
-         On tablets: two in a row, 
-        On mobile: one card on each row. -->
+        <h4>Smirre Works Out</h4>
         <div class="grid-parent-other-news">
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
