--- a/code/mostwanted.html
+++ b/code/mostwanted.html
@@ -45,11 +45,6 @@
                   >
                 </li>
                 <li>
-                  <a href="quotes.html" title="Quotes & Memes"
-                    >Quotes & Memes</a
-                  >
-                </li>
-                <li>
                   <a class="active" href="mostwanted.html" title="Most Wanted"
                     >Most Wanted</a
                   >
@@ -60,7 +55,6 @@
         </div>
       </nav>
     </header>
-
     <section class="logo-magazine">
       <div class="kwadrat">
         <div class="trojkat">
@@ -80,37 +74,32 @@
         <div class="grid-parent-big-news">
           <div class="grid-child-big-news paragraph-grid-item">
             <div class="big-news-paragraph">
-              <h2>The Latest Rage - Cat Yoga!</h2>
+              <h2>Most Wanted</h2>
+              <h3>146 Cat-Thieves That Were Caught Red-Pawed</h3>
+              <h4>A Bored Panda Article</h4>
               <p>
-                Cat Yoga is a calm and relaxing yin yoga class that suits
-                everyone. In the presence of our kitty cats, you get to land in
-                yourself. This class gives you the opportunity to feel the body,
-                let the mindrest and receive a recovery on a deep level. This is
-                more than ever in these times! Live cat yoga — participate from
-                the comfort of your own living room. After the success of cat
-                yoga in our cafe, we are now launching an exciting new product!
-                In order to welcome more participants, we will be broadcasting
-                live instructor-led yoga classes from our cat cafe every Monday
-                and Tuesday. You participate remotely via computer or mobile. If
-                you have a cat friend at home, they will participate based on
-                their desired interest.
+                There's a saying that goes “honest as a cat when the meat's out
+                of reach”- those adorable furballs might purr and beg for a
+                scratch behind the ears, but as soon as you turn your back,
+                they're back to their scheming ways. Here's a list of cats that
+                have been caught red-pawed in the act of stealing a tasty
+                morsel.
               </p>
               <p>
-                Book your place here on the website by selecting
-                <em>Online Cat Yoga</em>. We close registration 30 minutes
-                before the yoga class starts and you who registered will receive
-                an email with a link and password about 15 minutes before the
-                start. Dates for the class will be released later and we will
-                also eventually offer participants on site in the café. We look
-                forward to meeting you on the yoga mat!
+                In truth, owners should be mindful when their cats try to get
+                their paws on human food. Their digestion works differently from
+                ours, and many foods, even ones they love, like milk, can give
+                them upset stomachs or worse. Chocolate and onions are
+                especially dangerous, and should be kept tucked away far out of
+                reach.
               </p>
 
               <div class="primary-link">
                 <a
-                  href="https://javawhiskers.se/en/cat-yoga/"
+                  href="https://www.boredpanda.com/cats-stealing-food/?utm_source=google&utm_medium=organic&utm_campaign=organic"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >Book cat yoga at Java Whiskers</a
+                  >Take Me to Bored Panda</a
                 >
               </div>
             </div>
@@ -119,33 +108,9 @@
             <div class="img-big-news-div">
               <figure>
                 <img
-                  src="../img/illustratedYogaCat.png"
+                  src="../img/wanted.jpg"
                   class="img-big-news-one"
-                  alt="An illustration of a cat sitting in the yoga lotus position"
-                />
-                <figcaption>
-                  <em>Illustration:</em><em> Touch the Peacock</em>
-                  <div class="icon-div">
-                    <a
-                      href="https://www.instagram.com/touchthepeacock/"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                    >
-                      <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                      <span class="sr-only">Instagram</span>
-                    </a>
-                  </div>
-                </figcaption>
-              </figure>
-            </div>
-          </div>
-          <div class="grid-child-big-news medium-grid-item">
-            <div class="img-big-news-div">
-              <figure>
-                <img
-                  src="../img/sunSalutatingCat.jpg"
-                  class="img-big-news-two"
-                  alt="A cat doing yoga indoors"
+                  alt="A cat climbing on the kitchen bench looking for something in the cupboard"
                 />
                 <figcaption><em>Photo:</em><em>Smirre Archives</em></figcaption>
               </figure>
@@ -154,24 +119,17 @@
         </div>
       </section>
       <section class="other-news">
-        <h3>Smirre Works Out</h3>
-        <!-- The other news  -->
-        <!-- On desktop-sized screens: four cards in a row, 
-         On tablets: two in a row, 
-        On mobile: one card on each row. -->
+        <h4>Most Wanted Beds</h4>
         <div class="grid-parent-other-news">
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Bouldering</h4>
+              <h5>Paperboard Box</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
                     <div>
                       <p class="review">
-                        <q
-                          >Bouldering was so much fun, but at the same time,
-                          very scary!</q
-                        >
+                        <q>Loved the bed!</q>
                       </p>
                       <div class="icon-div">
                         <i class="material-icons pets" aria-hidden="true"
@@ -193,9 +151,9 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/climbingCat.jpg"
-                        class="img-other-news-two"
-                        alt="A cat climbing"
+                        src="../img/bb1.jpg"
+                        class="img-other-news"
+                        alt="A cat in a paperboard box"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -208,28 +166,16 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Outdoor Yoga</h4>
+              <h5>Carton Board Box</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
                     <div>
                       <div>
                         <p class="review">
-                          <q>I absolutely adore outdoor yoga!</q>
+                          <q>Nope</q>
                         </p>
                         <div class="icon-div">
-                          <i class="material-icons pets" aria-hidden="true"
-                            >pets</i
-                          >
-                          <i class="material-icons pets" aria-hidden="true"
-                            >pets</i
-                          >
-                          <i class="material-icons pets" aria-hidden="true"
-                            >pets</i
-                          >
-                          <i class="material-icons pets" aria-hidden="true"
-                            >pets</i
-                          >
                           <i class="material-icons pets" aria-hidden="true"
                             >pets</i
                           >
@@ -237,9 +183,9 @@
                       </div>
                       <figure>
                         <img
-                          src="../img/outoodoorYogaCat.jpg"
-                          class="img-other-news-one"
-                          alt="A cat doing yoga outdoors"
+                          src="../img/bb2.jpg"
+                          class="img-other-news"
+                          alt="A cat in a carton board box"
                         />
                         <figcaption class="figcaption-other-news">
                           <em>Photo:</em><em>Smirre Archives</em>
@@ -253,18 +199,15 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Power Walkin'</h4>
+              <h5>Cardboard Box</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
                     <div>
                       <p class="review">
-                        <q>Walking is nice, but no sweat!</q>
+                        <q>Ok, but not great</q>
                       </p>
                       <div class="icon-div">
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
                         <i class="material-icons pets" aria-hidden="true"
                           >pets</i
                         >
@@ -278,9 +221,9 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/walkingCat.jpeg"
-                        class="img-other-news-three"
-                        alt="A cat walking"
+                        src="../img/bb3.jpg"
+                        class="img-other-news"
+                        alt="A cat in a cardboard box"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -293,16 +236,13 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Abs Crunchin'</h4>
+              <h5>Carton Board Bed</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
                     <div>
-                      <p class="review"><q>Omg, I hate crunches!</q></p>
+                      <p class="review"><q>Meh</q></p>
                       <div class="icon-div">
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
                         <i class="material-icons pets" aria-hidden="true"
                           >pets</i
                         >
@@ -313,9 +253,9 @@
                     </div>
                     <figure>
                       <img
-                        src="../img/crunchingCat.jpg"
-                        class="img-other-news-four"
-                        alt="A cat doing crunches"
+                        src="../img/bb4.jpg"
+                        class="img-other-news"
+                        alt="A cat on a carton bed"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -326,8 +266,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </section>
     </div>
     <footer>
       <div class="logo-footer">
