--- a/code/newsreviews.html
+++ b/code/newsreviews.html
@@ -48,11 +48,6 @@
                   >
                 </li>
                 <li>
-                  <a href="quotes.html" title="Quotes & Memes"
-                    >Quotes & Memes</a
-                  >
-                </li>
-                <li>
                   <a href="mostwanted.html" title="Most Wanted">Most Wanted</a>
                 </li>
               </ul>
@@ -124,6 +119,7 @@
           </div>
           <div class="grid-child-big-news medium-grid-item">
             <div class="video-big-news-div">
+              <h4>Cat Trying Catnip</h4>
               <figure>
                 <video
                   controls
@@ -149,6 +145,7 @@
           </div>
           <div class="grid-child-big-news medium-grid-item">
             <div class="video-big-news-div">
+              <h4>Catnip Interview</h4>
               <figure>
                 <video
                   controls
@@ -166,157 +163,8 @@
         </div>
       </section>
       <section class="other-news">
-        <h3>Cats Try Out Beds and B&B:s</h3>
-        <!-- The other news  -->
-        <!-- On desktop-sized screens: four cards in a row, 
-         On tablets: two in a row, 
-        On mobile: one card on each row. -->
+        <h4>Cats Review B&B:s</h4>
         <div class="grid-parent-other-news">
-          <div class="grid-child-other-news paragraph-grid-item">
-            <div class="other-news-paragraph">
-              <h5>Paperboard Box</h5>
-              <div class="grid-child-other-news medium-grid-item">
-                <div class="other-news-div">
-                  <div class="card">
-                    <div>
-                      <p class="review">
-                        <q>Loved the bed!</q>
-                      </p>
-                      <div class="icon-div">
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                      </div>
-                    </div>
-                    <figure>
-                      <img
-                        src="../img/bb1.jpg"
-                        class="img-other-news"
-                        alt="A cat in a paperboard box"
-                      />
-                      <figcaption class="figcaption-other-news">
-                        <em>Photo:</em><em>Smirre Archives</em>
-                      </figcaption>
-                    </figure>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="grid-child-other-news paragraph-grid-item">
-            <div class="other-news-paragraph">
-              <h5>Carton Board Box</h5>
-              <div class="grid-child-other-news medium-grid-item">
-                <div class="other-news-div">
-                  <div class="card">
-                    <div>
-                      <div>
-                        <p class="review">
-                          <q>Nope</q>
-                        </p>
-                        <div class="icon-div">
-                          <i class="material-icons pets" aria-hidden="true"
-                            >pets</i
-                          >
-                        </div>
-                      </div>
-                      <figure>
-                        <img
-                          src="../img/bb2.jpg"
-                          class="img-other-news"
-                          alt="A cat in a carton board box"
-                        />
-                        <figcaption class="figcaption-other-news">
-                          <em>Photo:</em><em>Smirre Archives</em>
-                        </figcaption>
-                      </figure>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="grid-child-other-news paragraph-grid-item">
-            <div class="other-news-paragraph">
-              <h5>Cardboard Box</h5>
-              <div class="grid-child-other-news medium-grid-item">
-                <div class="other-news-div">
-                  <div class="card">
-                    <div>
-                      <p class="review">
-                        <q>Ok, but not great</q>
-                      </p>
-                      <div class="icon-div">
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                      </div>
-                    </div>
-                    <figure>
-                      <img
-                        src="../img/bb3.jpg"
-                        class="img-other-news"
-                        alt="A cat in a cardboard box"
-                      />
-                      <figcaption class="figcaption-other-news">
-                        <em>Photo:</em><em>Smirre Archives</em>
-                      </figcaption>
-                    </figure>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="grid-child-other-news paragraph-grid-item">
-            <div class="other-news-paragraph">
-              <h5>Carton Board Bed</h5>
-              <div class="grid-child-other-news medium-grid-item">
-                <div class="other-news-div">
-                  <div class="card">
-                    <div>
-                      <p class="review"><q>Meh</q></p>
-                      <div class="icon-div">
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                        <i class="material-icons pets" aria-hidden="true"
-                          >pets</i
-                        >
-                      </div>
-                    </div>
-                    <figure>
-                      <img
-                        src="../img/bb4.jpg"
-                        class="img-other-news"
-                        alt="A cat on a carton bed"
-                      />
-                      <figcaption class="figcaption-other-news">
-                        <em>Photo:</em><em>Smirre Archives</em>
-                      </figcaption>
-                    </figure>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
               <h5>Blekinge</h5>
