Remove divs not used

--- a/code/mostwanted.html
+++ b/code/mostwanted.html
@@ -19,11 +19,10 @@
       src="https://kit.fontawesome.com/818262a977.js"
       crossorigin="anonymous"
     ></script>
-    <title>Technigo News Site - Michelle Wegler</title>
+    <title>Technigo News Site Most Wanted- Michelle Wegler</title>
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
       <nav class="navbar">
         <div class="container">
           <a href="index.html"
@@ -70,7 +69,6 @@
     </section>
     <div class="border-container">
       <section class="big-news">
-        <!-- The big news content -->
         <div class="grid-parent-big-news">
           <div class="grid-child-big-news paragraph-grid-item">
             <div class="big-news-paragraph">
@@ -266,6 +264,8 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
     </div>
     <footer>
       <div class="logo-footer">
