--- a/code/newsreviews.html
+++ b/code/newsreviews.html
@@ -19,40 +19,32 @@
       src="https://kit.fontawesome.com/818262a977.js"
       crossorigin="anonymous"
     ></script>
-    <title>Technigo News Site - Michelle Wegler</title>
+    <title>Technigo News Site News & Reviews - Michelle Wegler</title>
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
       <nav class="navbar">
-        <div class="container">
-          <a href="index.html"
-            ><img
-              src="../img/a_cat.jpg"
-              alt="logo"
-              title="Logo, black cat"
-              class="logo-nav"
-          /></a>
-          <div class="container">
-            <div>
-              <ul>
-                <li>
-                  <a aria-current="page" href="index.html" title="Home">Home</a>
-                </li>
-                <li>
-                  <a
-                    class="active"
-                    href="./newsreviews.html"
-                    title="News & Revies"
-                    >News & Reviews</a
-                  >
-                </li>
-                <li>
-                  <a href="mostwanted.html" title="Most Wanted">Most Wanted</a>
-                </li>
-              </ul>
-            </div>
-          </div>
+        <a href="index.html"
+          ><img
+            src="../img/a_cat.jpg"
+            alt="logo"
+            title="Logo, black cat"
+            class="logo-nav"
+        /></a>
+        <div>
+          <ul>
+            <li>
+              <a aria-current="page" href="index.html" title="Home">Home</a>
+            </li>
+            <li>
+              <a class="active" href="./newsreviews.html" title="News & Revies"
+                >News & Reviews</a
+              >
+            </li>
+            <li>
+              <a href="mostwanted.html" title="Most Wanted">Most Wanted</a>
+            </li>
+          </ul>
         </div>
       </nav>
     </header>
@@ -71,7 +63,6 @@
     </section>
     <div class="border-container">
       <section class="big-news">
-        <!-- The big news content -->
         <div class="grid-parent-big-news">
           <div class="grid-child-big-news paragraph-grid-item">
             <div class="big-news-paragraph">
@@ -89,7 +80,6 @@
                 to this herb is hereditary—an estimated 50 percent of cats have
                 no reaction.
               </p>
-              <h4>Smelling vs. Eating</h4>
               <p>
                 The most intense catnip experience starts with the nose—one
                 whiff of the stuff and your cat promptly goes nuts. Researchers
@@ -97,14 +87,14 @@
                 brain. When eaten, however, it tends to have the opposite effect
                 and your cat mellows out. Most cats react to catnip by rolling,
                 flipping, rubbing, and eventually zoning out. They may meow or
-                growl at the same time. Other cats become hyperactive or
-                downright aggressive, especially if you approach them. Usually
-                these sessions last about 10 minutes, after which your cat loses
-                interest. It may take as long as two hours for him to "reset"
-                and become susceptible to it again. Be mindful of overindulgence
-                though—cats are unlikely to overdose on catnip, but they can get
-                sick if they eat too much. Trust your kitty to know when they've
-                had enough.
+                growl at the same time. Other cats become hyperactive
+                ordownright aggressive, especially if you approach them.
+                Usuallythese sessions last about 10 minutes, after which your
+                cat loses interest. It may take as long as two hours for him to
+                "reset" and become susceptible to it again. Be mindful of
+                overindulgence though—cats are unlikely to overdose on catnip,
+                but they can get sick if they eat too much. Trust your kitty to
+                know when they'vehad enough.
               </p>
 
               <div class="primary-link">
@@ -119,39 +109,29 @@
           </div>
           <div class="grid-child-big-news medium-grid-item">
             <div class="video-big-news-div">
-              <h4>Cat Trying Catnip</h4>
               <figure>
-                <video
-                  controls
-                  class="video-big-news-one"
-                  alt="A cat smelling a tea bag wrapper and falling off the table"
-                >
+                <video controls class="video-big-news-one">
                   <source src="../video/catnip.mp4" type="video/mp4" />
                 </video>
                 <figcaption>
                   <em>Video:</em><em> Smirre Archives</em><em>Music:</em
                   ><em>Bensound - Royalty Free Music for Creators</em>
+                  <div class="primary-link">
+                    <a
+                      href="https://www.bensound.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      >Take Me to Bensound</a
+                    >
+                  </div>
                 </figcaption>
-                <div class="primary-link">
-                  <a
-                    href="https://www.bensound.com/royalty-free-music?filters[]=Action&category=Mood&type=free&sort=relevance"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    >Take Me to Bensound</a
-                  >
-                </div>
               </figure>
             </div>
           </div>
           <div class="grid-child-big-news medium-grid-item">
             <div class="video-big-news-div">
-              <h4>Catnip Interview</h4>
               <figure>
-                <video
-                  controls
-                  class="video-big-news-two"
-                  alt="A cat responding meow to the question: What are your thoughts about catnip"
-                >
+                <video controls class="video-big-news-two">
                   <source src="../video/interview.mp4" type="video/mp4" />
                 </video>
                 <figcaption class="video-big-news-two-figcaption">
@@ -210,7 +190,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h5>Umeå</h5>
+              <h5>Ume</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -249,7 +229,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h5>Malmö Central B&B</h5>
+              <h5>Malmo Central B&B</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -292,7 +272,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h5>Malmö Spa</h5>
+              <h5>Malmo Spa</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -323,7 +303,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h5>Malmö Central B&B</h5>
+              <h5>Malmo Central B&B</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -366,7 +346,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h5>Umeå</h5>
+              <h5>Ume</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -402,7 +382,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h5>Malmö Best Western B&B</h5>
+              <h5>Malmo Best Western B&B</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -439,7 +419,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h5>Malmö Spa</h5>
+              <h5>Malmo Spa</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -471,7 +451,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h5>Malmö Spa</h5>
+              <h5>Malmo Spa</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -514,7 +494,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h5>Umeå</h5>
+              <h5>Ume</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -556,7 +536,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h5>Malmö Central B&B</h5>
+              <h5>Malmo Central B&B</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -599,7 +579,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h5>Malmö Spa</h5>
+              <h5>Malmo Spa</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
