--- a/code/index.html
+++ b/code/index.html
@@ -19,11 +19,10 @@
       src="https://kit.fontawesome.com/818262a977.js"
       crossorigin="anonymous"
     ></script>
-    <title>Technigo News Site - Michelle Wegler</title>
+    <title>Technigo News Site Home - Michelle Wegler</title>
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
       <nav class="navbar">
         <a href="#"
           ><img src="../img/a_cat.jpg" alt="Logo: A cat" class="logo-nav"
@@ -58,7 +57,6 @@
     </section>
     <div class="border-container">
       <section class="big-news">
-        <!-- The big news content -->
         <div class="grid-parent-big-news">
           <div class="grid-child-big-news paragraph-grid-item">
             <div class="big-news-paragraph">
