Updating GitHub Repo

--- a/code/index.html
+++ b/code/index.html
@@ -2,15 +2,26 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Visit Öland</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <nav class="navbar">
+      <div class="logo">
+       <img class="logotype" src="./Images/Visit öland.png" alt="Logotype Visit Öland">
+      </div>
+      <div class="navbar-menu">
+        <ul>
+          <div><li><a href="#"></a>Home</li></div>
+          <div><li><a href="#"></a>About</li></div>
+          <div><li><a href="#"></a>Contact</li></div>
+        </ul></div>
+      </nav>
     </header>
-
+    
+    <img class="panorama" src="./Images/himmelsberga.jpeg" alt="Picture of windmill">
     <section class="big-news">
       <!-- The big news content -->
     </section>
